# bevy_asset_loader_playground

./: Cargo.toml
src/: main.rs  player.rs
