[package]
name = "bevy_playground"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
"bevy/vorbis"
]

[dependencies]
bevy = "0.5.0"
# bevy_kira_audio = {version = "0.4.0", features = ["ogg"]}
bevy_asset_loader = {path = "../bevy_asset_loader/bevy_asset_loader"}
