[package]
name = "bevy_playground"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/bevy_gilrs",
    "bevy/bevy_wgpu",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_audio",
    "bevy/vorbis"
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
winit = "0.24.0"

bevy_asset_loader = {path = "../bevy_asset_loader/bevy_asset_loader"}
